@@ -2,6 +2,20 @@ use strict;
 use warnings;
 use ExtUtils::MakeMaker;
 
+my %make;
+if ($ExtUtils::MakeMaker::VERSION > 6.64) {
+   $make{META_MERGE} = {
+    'meta-spec' => { version => 2 },
+        resources => {
+            repository => {
+                type => 'git',
+                url  => 'https://github.com/JJ/Test-Text.git',
+                web  => 'https://github.com/JJ/Test-Text',
+            },
+        },
+    };
+}
+
 WriteMakefile(
     NAME                => 'Test::Text',
     AUTHOR              => 'JJ Merelo <jj@merelo.net>',
@@ -12,12 +26,11 @@ WriteMakefile(
     PREREQ_PM => {
 		  'Test::More' => 0,
 		  'version'    => 0,
-		  'File::Slurp' => 0,
+		  'File::Slurp::Tiny' => 0,
 		  'Text::Hunspell' => 2.08,
-		  'Encode::Encoder' => 0,
-		  'Test::Output' => 1.03,
-		  'Test::Simple' => 1.0
+		  'Test::Simple' => 1.0 #base class 
     },
     dist                => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
     clean               => { FILES => 'Test-Text-*' },
+    %make,
 );
