@@ -1,4 +1,10 @@
+2014-08-16  JJ Merelo  <jmerelo@amy>
+
+	* lib/Test/Text.pm: Many patches from Gabor Szabo and eliminated File::Slurp dependency. Also suppressed legacy "uses"
+
 2014-08-13  JJ Merelo  <jmerelo@amy>
+
+	* t/02.just_check.t: Added this since it's got an independent done_testing
 
 	* lib/Test/Text.pm (just_check): Finished tests and changed encoding for test script.
 
